# internal/app/api.go
@@ -5,7 +5,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/sandarioon/moto-alert-backend-go/internal/errors"
-	"github.com/sandarioon/moto-alert-backend-go/models"
+	"github.com/sandarioon/moto-alert-backend-go/models/dto"
 )
 
 type resource struct {
@@ -29,7 +29,7 @@ func RegisterHandlers(r *gin.RouterGroup, service Service) {
 // @Tags         app
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  models.Response
+// @Success      200  {object}  dto.GetAboutResponse
 // @Failure      500  {object}  errors.ErrorResponse
 // @Router       /app/about [get]
 func (r *resource) getAbout(c *gin.Context) {
@@ -39,29 +39,43 @@ func (r *resource) getAbout(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, models.Response{
+	c.JSON(http.StatusOK, dto.GetAboutResponse{
 		Status: http.StatusOK,
-		Data: map[string]string{
-			"text": response,
+		Data: dto.AboutData{
+			Text: response,
 		},
-		Message: "OK",
+		Message: dto.MessageOK,
 	})
 }
 
+// GetSocialLinks godoc
+// @Summary      Get app social links
+// @Description  Get app social links
+// @Tags         app
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  dto.SocialLinkResponse
+// @Failure      500  {object}  errors.ErrorResponse
+// @Router       /app/socialLinks [get]
 func (r *resource) getSocialLinks(c *gin.Context) {
-	socialLinks, err := r.service.GetSocialLinks()
-	if err != nil {
-		errors.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
-		return
-	}
+	socialLinks := r.service.GetSocialLinks()
 
-	c.JSON(http.StatusOK, models.Response{
+	c.JSON(http.StatusOK, dto.SocialLinkResponse{
 		Status:  http.StatusOK,
 		Data:    socialLinks,
-		Message: "OK",
+		Message: dto.MessageOK,
 	})
 }
 
+// GetSettings godoc
+// @Summary      Get app settings
+// @Description  Get app settings
+// @Tags         app
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  dto.GetSettingsResponse
+// @Failure      500  {object}  errors.ErrorResponse
+// @Router       /app/settings [get]
 func (r *resource) getSettings(c *gin.Context) {
 	settings, err := r.service.GetSettings()
 	if err != nil {
@@ -69,13 +83,21 @@ func (r *resource) getSettings(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, models.Response{
+	c.JSON(http.StatusOK, dto.GetSettingsResponse{
 		Status:  http.StatusOK,
 		Data:    settings,
-		Message: "OK",
+		Message: dto.MessageOK,
 	})
 }
 
+// GetPrivacyPolicy godoc
+// @Summary      Get privacy policy PDF
+// @Description  Get privacy policy PDF
+// @Tags         app
+// @Accept       json
+// @Produce      application/pdf
+// @Success      200
+// @Router       /app/privacyPolicy [get]
 func (r *resource) getPrivacyPolicy(c *gin.Context) {
 	filename := "privacy_policy.pdf"
 	filePath := "./assets/pdf/" + filename
